[package]
name = "booking"
version = "0.1.0"
authors = ["Cedric Hutchings <cedhut02@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = { git = "https://github.com/not-fl3/macroquad.git" }
serde_yaml = "0.8.13"
serde = { version = "1.0.116", features = [ "derive" ] }
linked-hash-map = { version = "0.5.3", features = ["serde_impl"]}
